--- a/IDPA XDW 1/src/application/dataWarehousing.fxml
+++ b/IDPA XDW 1/src/application/dataWarehousing.fxml
@@ -18,52 +18,19 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="800.0" stylesheets="@all.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.dataWarehousingController">
+<AnchorPane fx:id="mainAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="800.0" stylesheets="@all.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.dataWarehousingController">
    <children>
       <JFXTabPane fx:id="mainTabPane" prefHeight="450.0" prefWidth="800.0">
          <tabs>
-            <Tab styleClass="C:\Users\user\Desktop\GUI\all.css" text="Home">
+            <Tab text="Home">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="800.0">
-                     <children>
-                        <JFXButton fx:id="addVersion" layoutX="290.0" layoutY="195.0" onAction="#addVersionHandler" prefHeight="62.0" prefWidth="221.0" text="Add new version" />
-                        <Label layoutX="249.0" layoutY="14.0" prefHeight="43.0" prefWidth="128.0" text="Project Name" textFill="#f8f8f1">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="name" layoutX="390.0" layoutY="14.0" prefHeight="43.0" prefWidth="128.0" text="name" textFill="#f8f8f1">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="256.0" layoutY="57.0" prefHeight="43.0" prefWidth="128.0" text="Author" textFill="#f8f8f1">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="author" layoutX="392.0" layoutY="57.0" prefHeight="43.0" prefWidth="128.0" text="author" textFill="#f8f8f1">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="256.0" layoutY="100.0" prefHeight="43.0" prefWidth="128.0" text="Versions" textFill="#f8f8f1">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="nbOfVersions" layoutX="392.0" layoutY="100.0" prefHeight="43.0" prefWidth="128.0" text="nbOfV" textFill="#f8f8f1">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Label>
-                     </children>
+                  <AnchorPane fx:id="homeTab" minHeight="0.0" minWidth="0.0" prefHeight="389.0" prefWidth="799.0">
                   </AnchorPane>
                </content>
             </Tab>
             <Tab text="Versions">
                <content>
-                  <AnchorPane id="versionPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="800.0" stylesheets="@all.css">
+                  <AnchorPane id="versionPane" fx:id="versionTab" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="800.0" stylesheets="@all.css">
                      <children>
                         <TableView fx:id="tableview" layoutY="-3.0" prefHeight="401.0" prefWidth="800.0">
                           <columns>
@@ -88,50 +55,53 @@
             </Tab>
             <Tab text="Query">
                <content>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                  <AnchorPane fx:id="queryTab" prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <Label layoutX="59.0" layoutY="19.0" prefHeight="43.0" prefWidth="87.0" text="Version:" textFill="#b2b2b2">
+                        <Label fx:id="versionLabel" layoutX="59.0" layoutY="19.0" prefHeight="43.0" prefWidth="87.0" text="Version:" textFill="#b2b2b2">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <JFXComboBox fx:id="versionBox" layoutX="146.0" layoutY="25.0" onAction="#versionBoxChanged" prefHeight="25.0" prefWidth="125.0" unFocusColor="#b2b2b2" />
-                        <JFXCheckBox fx:id="deltaOnly" checkedColor="#10279c" layoutX="573.0" layoutY="23.0" onAction="#updateDropBoxes" text="Changes only" textFill="#b2b2b2" unCheckedColor="#b2b2b2" />
+                        <JFXComboBox fx:id="versionBox" layoutX="146.0" layoutY="25.0" onAction="#versionBoxChanged" prefHeight="25.0" prefWidth="60.0" unFocusColor="#b2b2b2" stylesheets="@all.css"/>
+                        <JFXCheckBox fx:id="deltaOnly" checkedColor="#10279c" layoutX="573.0" layoutY="30.0" onAction="#updateDropBoxes" text="Changes only" textFill="#b2b2b2" unCheckedColor="#b2b2b2" />
+                        <JFXToggleButton fx:id="advancedSearch" layoutX="343.0" layoutY="12.0" onAction="#toggleHandle" text="Advanced Search" textFill="#b2b2b2" toggleColor="#10279c" toggleLineColor="#2114b5c7" />
                         <JFXComboBox fx:id="filter1" layoutX="30.0" layoutY="81.0" onAction="#updateDropBoxes2" prefHeight="25.0" prefWidth="125.0" unFocusColor="#b2b2b2" />
                         <JFXComboBox fx:id="filter2" layoutX="165.0" layoutY="81.0" onAction="#updateDropBoxes3" prefHeight="25.0" prefWidth="125.0" unFocusColor="#b2b2b2" />
                         <JFXComboBox fx:id="filter3" layoutX="301.0" layoutY="81.0" onAction="#updateDropBoxes4" prefHeight="25.0" prefWidth="125.0" unFocusColor="#b2b2b2" />
                         <JFXComboBox fx:id="filter4" layoutX="437.0" layoutY="81.0" prefHeight="25.0" prefWidth="125.0" unFocusColor="#b2b2b2" />
-                        <TextArea fx:id="queryResult" layoutX="20.0" layoutY="146.0" prefHeight="224.0" prefWidth="761.0" />
-                        <JFXButton layoutX="615.0" layoutY="74.0" onAction="#queryHandle" prefHeight="39.0" prefWidth="123.0" text="Query" />
+         
+                       
                         <JFXTextField fx:id="searchBar" layoutX="27.0" layoutY="81.0" prefHeight="38.0" prefWidth="547.0" stylesheets="@all.css" unFocusColor="#b2b2b2" />
-                        <JFXToggleButton fx:id="advancedSearch" layoutX="343.0" layoutY="12.0" onAction="#toggleHandle" text="Advanced Search" textFill="#b2b2b2" toggleColor="#10279c" toggleLineColor="#2114b5c7" />
+                         <JFXButton fx:id="queryBtn" layoutX="615.0" layoutY="74.0" onAction="#queryHandle" prefHeight="39.0" prefWidth="123.0" text="Query" />
+                         <TextArea fx:id="queryResult" layoutX="20.0" layoutY="146.0" prefHeight="224.0" prefWidth="761.0" stylesheets="@all.css" />
+                        
                      </children></AnchorPane>
                </content>
             </Tab>
             <Tab text="User">
                <content>
-                  <AnchorPane fx:id="anchorUser" prefHeight="200.0" prefWidth="200.0" />
+                  <AnchorPane fx:id="anchorUser" prefHeight="389.0" prefWidth="799.0" />
                </content>
             </Tab>
             <Tab text="About">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <AnchorPane fx:id="aboutTab" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Label alignment="CENTER" layoutX="225.0" layoutY="14.0" prefHeight="84.0" prefWidth="350.0" text="XDP: XML Diff and Patch" textAlignment="CENTER" textFill="#f8f8f1">
+                        <Label fx:id="aboutTitle" alignment="CENTER" layoutX="225.0" layoutY="14.0" prefHeight="84.0" prefWidth="350.0" text="XDP: XML Diff and Patch" textAlignment="CENTER" textFill="#f8f8f1">
                            <font>
                               <Font size="30.0" />
                            </font>
                         </Label>
-                        <ImageView fitHeight="181.0" fitWidth="173.0" layoutX="35.0" layoutY="131.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="aboutImage" fitHeight="181.0" fitWidth="173.0" layoutX="35.0" layoutY="131.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../iconNew.png" />
                            </image>
                         </ImageView>
-                        <JFXTabPane layoutX="212.0" layoutY="94.0" prefHeight="286.0" prefWidth="552.0">
+                        <JFXTabPane fx:id="aboutTab" layoutX="212.0" layoutY="94.0" prefHeight="286.0" prefWidth="552.0">
                            <tabs>
-                              <Tab id="stab" text="Info">
+                              <Tab id="stab" fx:id="aboutInfoTab" text="Info">
                                  <content>
-                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="265.0" prefWidth="552.0">
+                                    <AnchorPane fx:id="infoAboutPane" minHeight="0.0" minWidth="0.0" prefHeight="265.0" prefWidth="552.0">
                                        <children>
                                           <Label alignment="TOP_LEFT" layoutX="8.0" layoutY="8.0" prefHeight="157.0" prefWidth="535.0" text="{'XDP: XML Diff and Patch is a a tool built in Java that compares two XML documents (structure and content).\n\nThis Application is part of a project in Lebanese American University, Course:  Intelligent Data Processing and Applications (COE 543/743).\n\nThis Tool is built by Georgio Yammine and Rami Naffah.'}" textFill="#f8f8f1" wrapText="true">
                                              <font>
@@ -152,9 +122,9 @@
                                     </AnchorPane>
                                  </content>
                               </Tab>
-                              <Tab id="stab" text="Settings">
+                              <Tab id="stab" fx:id="settingsInfoTab" text="Settings">
                                  <content>
-                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                    <AnchorPane fx:id="settingAboutPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                        <children>
                                           <Label layoutX="30.0" layoutY="51.0" text="updateRootName " textFill="#f8f8f1">
                                              <font>
@@ -208,9 +178,9 @@
                                     </AnchorPane>
                                  </content>
                               </Tab>
-                              <Tab id="stab" text="Help">
+                              <Tab id="stab" fx:id="helpInfoTab" text="Help">
                                  <content>
-                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                    <AnchorPane fx:id="helpInfoPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                        <children>
                                           <Label alignment="TOP_LEFT" layoutX="14.0" layoutY="10.0" prefHeight="247.0" prefWidth="526.0" text="{'• Use Get Diff to perform comparison between XML A and B, select reversible to get A&lt;-&gt;&gt;B or unselect it to get A-&gt;B, The output file will be in the directory of the app and the absolute path will be printed at the bottom of the page.\n\n• Use Reverse Diff to reverse a reversible patch into the other direction (A&lt;-&gt;&gt;B =&gt; A&lt;&lt;-&gt;B), if a patch is not reversible, you will get an error message, otherwise you will get the absolute path of the file at the bottom of the page.\n\n• Use Apply Patch to patch doc A and (A-&gt;B or A&lt;-&gt;&gt;B) to get back document B. The absolute path will be displayed at the bottom of the page. A message will appear to confirm if the patch is successful by comparing Hash CheckSums.\n\n**All output files will be in the directory of the App**\n**Click on any path to copy it to the clipboard**'}" textFill="#f8f8f1" wrapText="true">
                                              <font>
