Multiple feature added and bug fixes
* Added loading Screen
* Fixed bugs with some scenes not showing
* Fixed Bug with space saved not showing properly
* Fixed css problem with buttons inside the tables
* Made the program does not accept the last version again
* Made Size human readable
and more minor things...

--- a/IDPA XDW 1/bin/application/base.css
+++ b/IDPA XDW 1/bin/application/base.css
@@ -122,7 +122,9 @@ Text {
     -fx-border-color: transparent;
     -fx-border-width: 2;
 
-    -fx-background-radius: 0;
+	-fx-border-radius: 18px;
+    -fx-background-radius: 18px;
+
     -fx-background-insets: 0;
     -fx-background-color: button_background_color;
 
