--- a/IDPA XDW 1/bin/application/welcomeScreen.fxml
+++ b/IDPA XDW 1/bin/application/welcomeScreen.fxml
@@ -34,11 +34,11 @@
                                        <children>
                                           <TableView id="RecentTable" fx:id="recentTable" layoutX="1.0" layoutY="1.0" prefHeight="230.0" prefWidth="527.0" stylesheets="@dark_theme.css">
                                             <columns>
-                                              <TableColumn fx:id="RecentNameCol" prefWidth="118.0" text="Name" />
-                                              <TableColumn fx:id="RecentAuthorCol" minWidth="9.0" prefWidth="121.0" text="Author" />
-                                                <TableColumn fx:id="RecentDirCol" prefWidth="109.0" text="Directory" />
-                                                <TableColumn fx:id="RecentModCol" minWidth="0.0" prefWidth="116.0" text="Last Modified" />
-                                                <TableColumn fx:id="RecentPinCol" prefWidth="47.0" />
+                                              <TableColumn fx:id="RecentNameCol" prefWidth="119.0" text="Name" />
+                                              <TableColumn fx:id="RecentAuthorCol" minWidth="9.0" prefWidth="120.0" text="Author" />
+                                                <TableColumn fx:id="RecentDirCol" prefWidth="101.0" text="Directory" />
+                                                <TableColumn fx:id="RecentModCol" minWidth="0.0" prefWidth="119.0" text="Last Modified" />
+                                                <TableColumn fx:id="RecentPinCol" prefWidth="52.0" />
                                             </columns>
                                           </TableView>
                                        </children>
@@ -83,12 +83,17 @@
                         <JFXTextField fx:id="authorId" layoutX="202.0" layoutY="138.0" promptText="Author" />
                         <Label layoutX="35.0" layoutY="97.0" prefHeight="21.0" prefWidth="157.0" text="Name of Project" textFill="#b2b2b2" />
                         <Label layoutX="35.0" layoutY="146.0" text="Author of Project" textFill="#b2b2b2" />
-                        <Label fx:id="dirPath" alignment="CENTER" layoutX="199.0" layoutY="27.0" prefHeight="48.0" prefWidth="558.0" text="C:\Users\User\Documents\IDPA Project - XML Diff and Parsing\IDPA GUI\PATCH_afwikibooks-20200101-pages-meta-current.xml_afwikibooks-20200120-pages-meta-current.xml_1.0.xmlC:\Users\User\Documents\IDPA Project - XML Diff and Parsing\IDPA GUI\PATCH_afwikibooks-20200101-pages-meta-current.xml_afwikibooks-20200120-pages-meta-current.xml_1.0.xml" textAlignment="CENTER" textFill="#b2b2b2" textOverrun="LEADING_ELLIPSIS" wrapText="true" />
+                        <Label fx:id="dirPath" layoutX="199.0" layoutY="27.0" prefHeight="48.0" prefWidth="558.0" text="C:\Users\User\Documents\IDPA Project - XML Diff and Parsing\IDPA GUI\PATCH_afwikibooks-20200101-pages-meta-current.xml_afwikibooks-20200120-pages-meta-current.xml_1.0.xmlC:\Users\User\Documents\IDPA Project - XML Diff and Parsing\IDPA GUI\PATCH_afwikibooks-20200101-pages-meta-current.xml_afwikibooks-20200120-pages-meta-current.xml_1.0.xml" textAlignment="CENTER" textFill="#b2b2b2" textOverrun="LEADING_ELLIPSIS" wrapText="true" />
                         <Label layoutX="35.0" layoutY="197.0" text="Password of Project" textFill="#b2b2b2" />
                         <JFXPasswordField fx:id="passId" layoutX="202.0" layoutY="189.0" promptText="Password" />
                         <Label layoutX="35.0" layoutY="247.0" text="Confirm Password" textFill="#b2b2b2" />
                         <JFXPasswordField fx:id="confPassId" layoutX="202.0" layoutY="240.0" promptText="Confirm password" />
                         <JFXButton fx:id="createProject" layoutX="522.0" layoutY="169.0" onAction="#handleCreateProject" prefHeight="52.0" prefWidth="212.0" style="-fx-border-radius: 20;" text="Create New Project" />
+                        <Label fx:id="errorMessage" alignment="CENTER" layoutX="475.0" layoutY="230.0" prefHeight="68.0" prefWidth="303.0" text="ERROR 1 : akubkkkkkkkkkkkkkkkkkkkkkkkkkk" textAlignment="CENTER" textFill="#e82727" textOverrun="LEADING_ELLIPSIS" underline="true" wrapText="true">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Label>
                      </children>
                   </AnchorPane>
                </content>
