--- a/IDPA XDW 1/src/application/dataWarehousing.fxml
+++ b/IDPA XDW 1/src/application/dataWarehousing.fxml
@@ -4,6 +4,7 @@
 <?import com.jfoenix.controls.JFXCheckBox?>
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTabPane?>
+<?import com.jfoenix.controls.JFXTextArea?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXToggleButton?>
 <?import java.net.URL?>
@@ -18,7 +19,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="mainAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="800.0" stylesheets="@all.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.dataWarehousingController">
+<AnchorPane fx:id="mainAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="800.0" stylesheets="@all.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.dataWarehousingController">
    <children>
       <JFXTabPane fx:id="mainTabPane" prefHeight="450.0" prefWidth="800.0">
          <tabs>
@@ -83,11 +84,11 @@
                   <AnchorPane fx:id="anchorUser" prefHeight="389.0" prefWidth="799.0">
                      <children>
                         <JFXButton fx:id="createBtn" layoutX="285.0" layoutY="115.0" onAction="#createUserHandle" prefHeight="50.0" prefWidth="171.0" text="Create New User" />
-                        <JFXComboBox fx:id="userBox" layoutX="303.0" layoutY="54.0" onAction="#userBoxHandle" prefHeight="26.0" prefWidth="135.0" unFocusColor="#b2b2b2" />
-                        <JFXTextField fx:id="newUserField" layoutX="281.0" layoutY="48.0" unFocusColor="#b2b2b2" />
-                        <JFXButton fx:id="addUserBtn" layoutX="504.0" layoutY="55.0" onAction="#addUserHandle" prefHeight="50.0" prefWidth="149.0" text="Add New User" />
+                        <JFXComboBox fx:id="userBox" layoutX="270.0" layoutY="54.0" onAction="#userBoxHandle" prefHeight="26.0" prefWidth="202.0" unFocusColor="#b2b2b2" />
+                        <JFXTextField fx:id="newUserField" layoutX="270.0" layoutY="49.0" prefHeight="37.0" prefWidth="202.0" unFocusColor="#b2b2b2" />
+                        <JFXButton fx:id="addUserBtn" layoutX="504.0" layoutY="55.0" onAction="#addUserHandle" prefHeight="50.0" prefWidth="114.0" text="Add User" />
                         <Label fx:id="userVerifyLabel" layoutX="237.0" layoutY="14.0" prefHeight="18.0" prefWidth="267.0" textFill="#f00505" />
-                        <ImageView fx:id="userIcon" fitHeight="97.0" fitWidth="104.0" layoutX="103.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="userIcon" fitHeight="97.0" fitWidth="104.0" layoutX="122.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/user.png" />
                            </image>
@@ -98,9 +99,9 @@
             </Tab>
             <Tab text="About">
                <content>
-                  <AnchorPane fx:id="aboutTab" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <AnchorPane fx:id="aboutTab" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-text-fill: white;">
                      <children>
-                        <Label fx:id="aboutTitle" alignment="CENTER" layoutX="225.0" layoutY="14.0" prefHeight="84.0" prefWidth="350.0" text="XDP: XML Diff and Patch" textAlignment="CENTER" textFill="#f8f8f1">
+                        <Label fx:id="aboutTitle" alignment="CENTER" layoutX="264.0" layoutY="14.0" prefHeight="84.0" prefWidth="382.0" text="XDW: XML Data Warehouse" textAlignment="CENTER" textFill="#f8f8f1">
                            <font>
                               <Font size="30.0" />
                            </font>
@@ -110,102 +111,7 @@
                               <Image url="@../iconNew.png" />
                            </image>
                         </ImageView>
-                        <JFXTabPane fx:id="aboutTab" layoutX="212.0" layoutY="94.0" prefHeight="286.0" prefWidth="552.0">
-                           <tabs>
-                              <Tab id="stab" fx:id="aboutInfoTab" text="Info">
-                                 <content>
-                                    <AnchorPane fx:id="infoAboutPane" minHeight="0.0" minWidth="0.0" prefHeight="265.0" prefWidth="552.0">
-                                       <children>
-                                          <Label alignment="TOP_LEFT" layoutX="8.0" layoutY="8.0" prefHeight="157.0" prefWidth="535.0" text="{'XDP: XML Diff and Patch is a a tool built in Java that compares two XML documents (structure and content).\n\nThis Application is part of a project in Lebanese American University, Course:  Intelligent Data Processing and Applications (COE 543/743).\n\nThis Tool is built by Georgio Yammine and Rami Naffah.'}" textFill="#f8f8f1" wrapText="true">
-                                             <font>
-                                                <Font name="System Bold" size="12.0" />
-                                             </font>
-                                          </Label>
-                                          <ImageView fitHeight="43.0" fitWidth="51.0" layoutX="39.0" layoutY="169.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../githubw.png" />
-                                             </image>
-                                          </ImageView>
-                                          <Label alignment="TOP_LEFT" layoutX="90.0" layoutY="181.0" onMouseClicked="#copyHandle" prefHeight="24.0" prefWidth="423.0" text="https://github.com/georgioyammine/XDP-XML-Diff-and-Patch" textFill="#f8f8f1" wrapText="true">
-                                             <font>
-                                                <Font name="System Bold" size="12.0" />
-                                             </font>
-                                          </Label>
-                                       </children>
-                                    </AnchorPane>
-                                 </content>
-                              </Tab>
-                              <Tab id="stab" fx:id="settingsInfoTab" text="Settings">
-                                 <content>
-                                    <AnchorPane fx:id="settingAboutPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                       <children>
-                                          <Label layoutX="30.0" layoutY="51.0" text="updateRootName " textFill="#f8f8f1">
-                                             <font>
-                                                <Font name="System Bold" size="12.0" />
-                                             </font>
-                                          </Label>
-                                          <JFXTextField fx:id="updateRootBox" focusColor="#ffff8d" layoutX="150.0" layoutY="38.0" prefHeight="25.0" prefWidth="38.0" />
-                                          <JFXButton fx:id="applyBtn" layoutX="231.0" layoutY="178.0" onAction="#applySettingsHandle" prefHeight="41.0" prefWidth="90.0" style="-fx-border-radius: 20;" text="Apply" />
-                                          <Label layoutX="229.0" layoutY="14.0" text="Changing Costs" textFill="#f8f8f1">
-                                             <font>
-                                                <Font name="System Bold" size="13.0" />
-                                             </font>
-                                          </Label>
-                                          <Label layoutX="30.0" layoutY="88.0" text="insertContained " textFill="#f8f8f1">
-                                             <font>
-                                                <Font name="System Bold" size="12.0" />
-                                             </font>
-                                          </Label>
-                                          <JFXTextField fx:id="insertContainedBox" focusColor="#ffff8d" layoutX="150.0" layoutY="75.0" prefHeight="25.0" prefWidth="38.0" />
-                                          <Label layoutX="30.0" layoutY="121.0" text="deleteContained " textFill="#f8f8f1">
-                                             <font>
-                                                <Font name="System Bold" size="12.0" />
-                                             </font>
-                                          </Label>
-                                          <JFXTextField fx:id="deleteContainedBox" focusColor="#ffff8d" layoutX="150.0" layoutY="109.0" prefHeight="25.0" prefWidth="38.0" />
-                                          <Label layoutX="30.0" layoutY="156.0" text="deleteOrInsertLeaf " textFill="#f8f8f1">
-                                             <font>
-                                                <Font name="System Bold" size="12.0" />
-                                             </font>
-                                          </Label>
-                                          <JFXTextField fx:id="leafOpBox" focusColor="#ffff8d" layoutX="150.0" layoutY="143.0" prefHeight="25.0" prefWidth="38.0" />
-                                          <Label layoutX="358.0" layoutY="72.0" text="attributeNameCost " textFill="#f8f8f1">
-                                             <font>
-                                                <Font name="System Bold" size="12.0" />
-                                             </font>
-                                          </Label>
-                                          <JFXTextField fx:id="attrNameBox" focusColor="#ffff8d" layoutX="478.0" layoutY="59.0" prefHeight="25.0" prefWidth="38.0" />
-                                          <Label layoutX="358.0" layoutY="109.0" text="attributeValueCost " textFill="#f8f8f1">
-                                             <font>
-                                                <Font name="System Bold" size="12.0" />
-                                             </font>
-                                          </Label>
-                                          <JFXTextField fx:id="attrValBox" focusColor="#ffff8d" layoutX="478.0" layoutY="96.0" prefHeight="25.0" prefWidth="38.0" />
-                                          <Label layoutX="358.0" layoutY="142.0" text="textTokenCost " textFill="#f8f8f1">
-                                             <font>
-                                                <Font name="System Bold" size="12.0" />
-                                             </font>
-                                          </Label>
-                                          <JFXTextField fx:id="textTokenBox" focusColor="#ffff8d" layoutX="478.0" layoutY="130.0" prefHeight="25.0" prefWidth="38.0" />
-                                       </children>
-                                    </AnchorPane>
-                                 </content>
-                              </Tab>
-                              <Tab id="stab" fx:id="helpInfoTab" text="Help">
-                                 <content>
-                                    <AnchorPane fx:id="helpInfoPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                       <children>
-                                          <Label alignment="TOP_LEFT" layoutX="14.0" layoutY="10.0" prefHeight="247.0" prefWidth="526.0" text="{'• Use Get Diff to perform comparison between XML A and B, select reversible to get A&lt;-&gt;&gt;B or unselect it to get A-&gt;B, The output file will be in the directory of the app and the absolute path will be printed at the bottom of the page.\n\n• Use Reverse Diff to reverse a reversible patch into the other direction (A&lt;-&gt;&gt;B =&gt; A&lt;&lt;-&gt;B), if a patch is not reversible, you will get an error message, otherwise you will get the absolute path of the file at the bottom of the page.\n\n• Use Apply Patch to patch doc A and (A-&gt;B or A&lt;-&gt;&gt;B) to get back document B. The absolute path will be displayed at the bottom of the page. A message will appear to confirm if the patch is successful by comparing Hash CheckSums.\n\n**All output files will be in the directory of the App**\n**Click on any path to copy it to the clipboard**'}" textFill="#f8f8f1" wrapText="true">
-                                             <font>
-                                                <Font name="System Bold" size="12.0" />
-                                             </font>
-                                          </Label>
-                                       </children>
-                                    </AnchorPane>
-                                 </content>
-                              </Tab>
-                           </tabs>
-                        </JFXTabPane>
+                        <JFXTextArea fx:id="aboutText" layoutX="223.0" layoutY="115.0" prefHeight="232.0" prefWidth="544.0" style="-fx-text-fill: #f8f8f1;" text="orem ipsum dolor sit amet, consectetur adipiscing elit. Nunc auctor tellus non laoreet porta. Nunc enim mi, gravida posuere libero a, tempor eleifend elit. Pellentesque a neque accumsan, fermentum est id, tincidunt diam. Nulla rutrum mi vitae ligula viverra, in convallis risus suscipit. Etiam dapibus lacus et velit semper consectetur. Morbi blandit rhoncus libero vitae porttitor. Cras et mollis dolor, et dictum ante. Donec quis diam eget tellus feugiat tempus ac in est. Pellentesque sit amet tempor odio. Cras condimentum viverra ex, sit amet semper elit rhoncus vel. Cras suscipit quis odio nec rhoncus. Phasellus condimentum nulla eu imperdiet eleifend. Vestibulum et ante ex.&#10;&#10;Maecenas mollis eu odio ut cursus. Integer elit orci, aliquet sed finibus ac, commodo quis ex. Mauris id turpis sed tortor blandit faucibus. Maecenas eget justo et est dapibus posuere. Cras arcu urna, interdum in libero et, hendrerit euismod tellus. Cras faucibus diam pretium ipsum faucibus, ornare ornare diam venenatis. Cras pellentesque sem sapien, at congue lorem mollis sit amet." />
                      </children>
                   </AnchorPane>
                </content>
